Various UI fixes: - fix calculator layout on mobile with large numbers - improve clickability of links - improve hover state on buttons

--- a/src/scss/_calculator.scss
+++ b/src/scss/_calculator.scss
@@ -37,6 +37,7 @@
     &:hover,
     &:focus {
       background-color: $c-pink-hov;
+      max-height: 69px;
     }
 
     &:active {
@@ -118,7 +119,10 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 400px) {
+  .screen {
+    height: 140px;
+  }
   .button {
     width: 50px;
     height: 50px;
@@ -131,9 +135,11 @@
     height: 50px;
   }
   .screen__output {
-    font-size: rem(45px);
+    max-width: 180px;
+    font-size: rem(38px);
   }
   .screen__equation {
+    font-size: rem(24px);
     max-width: 180px;
   }
 }
