--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -22,6 +22,7 @@ body {
 
 .link {
   color: $c-dark-gray;
+  padding: 12px;
 }
 
 .headline {
